@@ -150,7 +150,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.1038 $"))
+    (let ((rev "$Revision: 1.1039 $"))
       (and (string-match "\\.\\([0-9]+\\) \\$\\'" rev)
 	   (setq rev (- (string-to-number (match-string 1 rev)) 1030))
 	   (concat "1.4.0" (if (>= rev 0) (format ".%d" (+ rev 50)) "")))))
@@ -4118,23 +4118,20 @@ If the optional argument NO-CACHE is non-nil, cache is not used."
       (w3m-message "Reading %s...done" url)
       (when success
 	(goto-char (point-min))
-	(let ((case-fold-search t))
+	(let ((case-fold-search t)
+	      type)
 	  (when (re-search-forward "^w3m-current-url:" nil t)
 	    (delete-region (point-min) (match-beginning 0))
 	    (when (search-forward "\n\n" nil t)
-	      ;; Asahi-shimbun sometimes says gif as jpeg mistakenly.  So,
-	      ;; we cannot help trusting the magic at the beginning of data.
-	      (when (looking-at "\\(GIF8\\)\\|\\(\377\330\\)\\|\\(\211PNG\\)")
-		(let ((type (cond
-			     ((match-beginning 1) "gif")
-			     ((match-beginning 2) "jpeg")
-			     ((match-beginning 3) "png"))))
-		  (save-excursion
-		    (when (re-search-backward "^content-type: image/\\(.+\\)$"
-					      nil t)
-		      (delete-region (goto-char (match-beginning 1))
-				     (match-end 1))
-		      (insert type)))))
+	      (save-excursion
+		;; Asahi-shimbun sometimes says gif as jpeg mistakenly, for
+		;; example.  So, we cannot help trusting the data itself.
+		(when (and (setq type (w3m-image-type-from-data
+				       (buffer-substring (point) (point-max))))
+			   (re-search-backward "^content-type: image/\\(.+\\)$"
+					       nil t))
+		  (delete-region (goto-char (match-beginning 1)) (match-end 1))
+		  (insert (symbol-name type))))
 	      (let ((header (buffer-substring (point-min) (point))))
 		(when w3m-use-cookies
 		  (w3m-cookie-set url (point-min) (point)))
