@@ -1,3 +1,10 @@
+2004-05-12  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-util.el (w3m-image-type-from-data): New function.  Suggested
+	by KOSEKI Yoshinori <kose@meadowy.org>.
+
+	* w3m.el (w3m-w3m-dump-extra): Use it.
+
 2004-05-11  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-proc.el (w3m-process-start-process): Use
